--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,16 @@ body {
     font-size: 28px;
 }
 
+ .meniu-glisant{
+    display: none;
+    position: absolute;
+    margin-top: -3px;
+    margin-left: 10px;
+}
+.meniu:hover .meniu-glisant{
+    display: inline-block;
+} 
+
 .material-symbols-outlined {
     position: fixed;
     right:10px;
@@ -247,3 +257,4 @@ footer {
 .solobanu{
     width: 350px;
 }
+
